--- a/src/components/search/FormSearch.module.css
+++ b/src/components/search/FormSearch.module.css
@@ -1,51 +1,57 @@
-.search {
-	flex-direction: column;
-	text-align: center;
-}
-
-.searchTitle {
-	font-size: 1.8rem;
-	font-weight: 700;
-	margin-bottom: 1.2rem;
-}
-
 .searchForm {
 	display: flex;
+	flex-direction: column;
+	align-items: center;
+	width: 100%;
+	gap: 1rem;
 }
 
-.searchFormGroup {
-	position: relative;
+.searchForm_searchWrapper {
 	display: flex;
+	flex-direction: column;
+	gap: 0.25rem !important;
 }
 
-.searchFormGroupSelect {
+.searchForm_searchTip {
+	width: 100%;
+	font-size: 0.9rem;
+	color: var(--main-color);
+	margin: 0;
+}
+
+.searchForm_fieldWrapper {
+	width: 100%;
 	position: relative;
 	display: flex;
 	flex-direction: row;
-	gap: 0.6rem;
-	width: 100%;
+	align-items: center;
 
-	@media screen and (min-width: 1024px) {
+	/* @media screen and (min-width: 1024px) {
 		flex-direction: column;
 		flex-grow: 1;
 		gap: 0.2rem;
 		width: auto;
-	}
+	} */
 }
 
-.searchFormSelect {
-	position: relative;
-	padding: 1rem;
-	padding-left: 2rem;
-	border: none;
-	background-color: var(--blue-extra-light);
-	color: rgb(110, 110, 110);
-	border-radius: 5px;
-	font-size: 1rem;
-	font-weight: 500;
+.searchForm_icon {
+	position: absolute;
+	top: 50%;
+	left: 0.5rem;
+	transform: translateY(-50%);
+	width: 1.5rem;
+	z-index: 1;
+	color: var(--main-color);
+}
+
+.searchForm_field {
 	width: inherit;
-	cursor: pointer;
-	transition: border-color 0.3s;
+	background-color: var(--white);
+	color: rgb(110, 110, 110);
+	padding: 1rem;
+	padding-left: 2.4rem;
+	border-radius: 0.375rem;
+	margin-top: 0;
 
 	&:focus {
 		outline: none;
@@ -53,11 +59,10 @@
 	}
 }
 
-.searchFormSelectIcon {
+.searchForm_field[type="date"]::-webkit-calendar-picker-indicator {
+	opacity: 0;
 	position: absolute;
-	top: 50%;
-	left: 0.4rem;
-	transform: translateY(-50%);
-	width: 1.5rem;
-	z-index: 1;
+	width: 100%;
+	height: 100%;
+	cursor: pointer;
 }
