--- a/src/pages/CarDetail.module.css
+++ b/src/pages/CarDetail.module.css
@@ -1,7 +1,6 @@
 /* ########## INFO ########## */
 .carDetail_info {
 	width: 100%;
-	min-height: 100vh;
 	height: 100%;
 }
 
@@ -221,7 +220,7 @@
 	flex-direction: column;
 	gap: 1.5rem;
 
-	@media screen and (min-width: 1024px) {
+	@media screen and (min-width: 768px) {
 		flex-direction: row;
 	}
 }
@@ -239,7 +238,8 @@
 	gap: 1.5rem;
 }
 
-.carDetail_infoTip {
+.carDetail_noAvailableTip {
+	position: relative;
 	width: 100%;
 	display: flex;
 	justify-content: flex-start;
@@ -248,5 +248,12 @@
 	margin-bottom: 1rem;
 	color: var(--warning);
 	font-weight: 600;
+
+	&::before {
+		content: "";
+		width: 50px;
+		height: 38px;
+		background-color: var(--warning);
+	}
 }
-/* END INFO EXTRA */
+/* END COMPLEMENT */
