--- a/src/components/categories/Categories.module.css
+++ b/src/components/categories/Categories.module.css
@@ -91,6 +91,8 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	cursor: pointer;
+	padding: 0 2rem;
 
 	@media screen and (min-width: 1024px) {
 		width: 100%;
