--- a/src/components/UserForm/UserForm.module.css
+++ b/src/components/UserForm/UserForm.module.css
@@ -14,6 +14,22 @@
 	width: 100%;
 }
 
+.inputGroupBlock {
+	display: flex;
+	align-items: center;
+	border-radius: 5px;
+	padding: 0.5rem;
+	background-color: rgb(240, 240, 240);
+	position: relative;
+	width: 100%;
+}
+
+.inputGroupBlock:focus-within {
+    background-color: white;
+    transition: background-color 0.3s ease-in-out;
+}
+
+
 .icon {
 	color: #3b82f6;
 	position: absolute;
