--- a/src/App.css
+++ b/src/App.css
@@ -37,6 +37,11 @@
 	flex-direction: column;
 }
 
+.swal2-input {
+    margin: 0.5rem 0 1rem !important;
+	background-color: var(--blue-extra-light);
+}
+
 .main-btn {
 	display: inline-block;
 	font-size: 1rem;
