Integración de consulta a la BD para renderizado de galería, detalles, especificaciones y opiniones en el detalle por auto

--- a/src/components/galleryModal/GalleryModal.module.css
+++ b/src/components/galleryModal/GalleryModal.module.css
@@ -35,6 +35,11 @@
 	height: auto;
 }
 
+.image[alt="GenericImage_2"],
+.image[alt="GenericImage_4"] {
+	filter: contrast(50%);
+}
+
 .closeButton {
 	display: flex;
 	position: absolute;
