--- a/src/pages/CarDetail.module.css
+++ b/src/pages/CarDetail.module.css
@@ -199,6 +199,10 @@
 		margin-right: 0.8rem;
 	}
 
+	& p {
+		text-transform: capitalize;
+	}
+
 	& span {
 		font-weight: 600;
 		text-transform: uppercase;
